<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for Editor-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Overview Category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ph"
            android:id="@+id/imageView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:text="@string/category_item_name"
            style="@style/CategoryStyle" />
        <EditText
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_name"
            android:maxLines="1"/>
        <TextView
            android:text="@string/category_item_quantity"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/minus_quantity"/>

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_item_quantity"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/plus_quantity"/>
            </LinearLayout>
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />
        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_item_price"/>
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_order" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_email"
                android:inputType="textEmailAddress"
                android:id="@+id/supplier_email"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order"
                android:id="@+id/order"/>

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
